--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Developpeur Front End - Spécialisation React."/>
     <title>Gautier Colasse - Développeur Front End</title>
