--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Developpeur Front End - Spécialisation React."/>
-    <meta property="og:image" content="%PUBLIC_URL%/metaogimage.png">
+    <meta property="og:image" content="%PUBLIC_URL%/metaogimage.png" />
+    <meta property='og:description' content='Developpeur Front End - Spécialisation React.'/>
     <title>Gautier Colasse - Développeur Front End</title>
   </head>
   <body>
@@ -13,3 +14,6 @@
     <div id="root"></div>
   </body>
 </html>
+
+Gautier Colasse - Développeur Front End
+Developpeur Front End - Spécialisation React.
