Add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Developpeur Front End - Spécialisation React."/>
-    <meta property="og:image" content="%PUBLIC_URL%/metaogimage.png" />
-    <meta property='og:description' content='Developpeur Front End - Spécialisation React.'/>
-    <title>Gautier Colasse - Développeur Front End</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Développeur Front End - Spécialisation React. Disponible pour vos projets en freelance. Ouvert à d'autres opportunités."
+        />
+        <meta property="og:image" content="%PUBLIC_URL%/metaogimage.png" />
+        <meta property="og:description" content="Developpeur Front End - Spécialisation React." />
+        <title>Gautier Colasse - Développeur Front End - React</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-199994248-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+            gtag("config", "UA-199994248-1");
+        </script>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
+    </body>
 </html>
